RESOLVED FIXED215899
structureOrNull should take VM instead of getting it from the marked block
https://bugs.webkit.org/show_bug.cgi?id=215899
Summary structureOrNull should take VM instead of getting it from the marked block
Keith Miller
Reported 2020-08-27 12:29:46 PDT
structureOrNull should take VM instead of getting it from the marked block
Attachments
Patch (11.28 KB, patch)
2020-08-27 12:30 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2020-08-27 12:30:57 PDT
Yusuke Suzuki
Comment 2 2020-08-27 12:31:59 PDT
Comment on attachment 407423 [details] Patch r=me
EWS
Comment 3 2020-08-27 13:12:02 PDT
Committed r266251: <https://trac.webkit.org/changeset/266251> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407423 [details].
Radar WebKit Bug Importer
Comment 4 2020-08-27 13:13:15 PDT
Note You need to log in before you can comment on or make changes to this bug.