structureOrNull should take VM instead of getting it from the marked block https://bugs.webkit.org/show_bug.cgi?id=215899

Reviewed by Yusuke Suzuki.

It's slightly faster use an existing VM over recomputing the address. It probably doesn't
happen to matter here for performance but it's good hygiene.

* API/tests/JSWrapperMapTests.mm:
(+[JSWrapperMapTests testStructureIdentity]):
* jit/JITOperations.cpp:
* runtime/JSCJSValue.h:
* runtime/JSCJSValueInlines.h:
(JSC::JSValue::structureOrNull const):
(JSC::JSValue::structureOrUndefined const): Deleted.


Canonical link: https://commits.webkit.org/228703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266251 268f45cc-cd09-0410-ab3c-d52691b4dbfc